done basic - not yet combined with docker(tomorow)

--- a/vegatables/veggies.html
+++ b/vegatables/veggies.html
@@ -1,13 +1,15 @@
-
 <!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Vegatables</title>
 </head>
 <body>
-    <h1> Hello my brother. I learn Nginx</h1>
+    <h1> Vegatables so good for heath</h1>
+    <li>Eggplant</li>
+    <li>Onion</li>
+    <li>Banana</li>
 </body>
 </html>
