--- a/fruits/index.html
+++ b/fruits/index.html
@@ -1,13 +1,15 @@
-
 <!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>My Fruits</title>
 </head>
 <body>
-    <h1> Hello my brother. I learn Nginx</h1>
+    <h1> Fruits so delicious</h1>
+    <li>Melon</li>
+    <li>Apple</li>
+    <li>Banana</li>
 </body>
 </html>
